# fquantizer

./: CMakeLists.txt  README.md
cmake/: FindFIRPM.cmake  FindFPLLL.cmake
include/filter/: afp.h  band.h  barycentric.h  cheby.h  conv.h  eigenvalue.h  fpminimax.h  grid.h  plotting.h  pm.h  roots.h  util.h
src/: CMakeLists.txt  afp.cpp  band.cpp  barycentric.cpp  cheby.cpp  conv.cpp  eigenvalue.cpp  fpminimax.cpp  grid.cpp  plotting.cpp  pm.cpp  roots.cpp
test/: quantization_tests.cpp
